# Drone-Kalman-Filter

./: .gitignore  README.md  pyproject.toml  对接说明.md  技术实现说明.md
src/drone_kalman_filter/: __init__.py  _kalman_model.py  _kalman_rts.py  _metrics_acceptance.py  _metrics_alignment.py  _metrics_statistics.py  _prefilter_burst.py  _prefilter_burst_core.py  _prefilter_fusion.py  _prefilter_geometry.py  _prefilter_legacy.py  _prefilter_suspicion.py  _prefilter_types.py  cli.py  config.py  geo.py  kalman.py  message.py  metrics.py  plugin.py  prefilter.py  segment.py
src/drone_kalman_filter/_kalman/: __init__.py  rts.py
src/drone_kalman_filter/_metrics/: __init__.py  acceptance.py  alignment.py  statistics.py
src/drone_kalman_filter/_prefilter/: __init__.py  burst.py  burst_core.py  fusion.py  geometry.py  legacy.py  suspicion.py
tooling/drone_kalman_validation/: __init__.py  alignment.py  baseline.py  diagnose.py  diagnostics.py  preflight.py  reporting.py  validate.py
tooling/drone_kalman_visualization/: __init__.py  compare.py  io.py  plotting.py
